# nymdrive

./: .gitignore  Cargo.toml  README.md  app.sh  client.db  copy_db.sh  file_hashes.sh  nym_client.sh  reset.sh  server.db  server.sh
client/: Cargo.toml
client/src/: lib.rs  monitor.rs
data/: Cargo.toml
data/src/: lib.rs
gui/: Cargo.toml
gui/.cargo/: config.toml
gui/src/: main.rs
nym-duplex/: Cargo.toml  LICENSE  README.md
nym-duplex/src/: lib.rs  socks.rs  transport.rs
plan/: README.md
server/: Cargo.toml  LICENSE
server/.cargo/: config.toml
server/src/: main.rs
systemd/: nym-client.service
