[package]
name = "gui"
version = "0.1.0"
edition = "2021"

[dependencies]
iced = { version = "0.3", features = ["glow", "tokio"] }
client = { version = "0.1", path = "../client" }
sqlx = { version = "0.5", features = [ "runtime-tokio-native-tls", "sqlite" ] }
tokio = { version = "1", features = ["full"] }
log = "0.4"
home = "0.5"
lazy_static = "1"
pretty_env_logger = "0.4"
