[package]
name = "nym-duplex"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3"
futures = "0.3"
nym-websocket = { package = "websocket-requests", git = "https://github.com/nymtech/nym"}
nym-addressing = { package = "nymsphinx-addressing", git = "https://github.com/nymtech/nym"}
nym-sphinx = { package = "nymsphinx", git = "https://github.com/nymtech/nym"}
rand = "0.8"
serde = "1.0"
structopt = "0.3"
tokio = { version = "1", features = [ "full" ] }
tokio-byteorder = "0.3.0"
tokio-tungstenite = "0.15"
tracing = "0.1"
tracing-subscriber = "0.2"