[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
warp = { version = "0.3", features = ["tls"] }
log = "0.4"
pretty_env_logger = "0.4"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.5", features = [ "runtime-tokio-native-tls", "sqlite" ] }
anyhow = { version = "1", features = ["backtrace"] }
bytes = "1"
bincode = "1"
http = "0.2"
data = { path = "../data" }
lazy_static = "1"
rand = "0.8"
rust-argon2 = "0.8"
serde = "1"
hyper = "0.14"
